--- a/nova _senha.html
+++ b/nova _senha.html
@@ -13,18 +13,18 @@
     <!--link de icones -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <!--link de icones -->
-    <link rel="stylesheet" href="assets/css/style_login_2.css">
+    <link rel="stylesheet" href="assets/css/style_nova_senha.css">
     <link rel="stylesheet" href="assets/css/btn_a.css">
 </head>
 <body>
     <header>
         <a href="index.html"><i class='bx bx-left-arrow-alt' ></i></a>
-        <p><a href="index.html">Voltar</a></p>
+        <p><a href="esqueceu_senha.html">Voltar</a></p>
     </header>
     <main>
       <section id="backgro"><span></span></section>
       <section id="moca">
-        <img src="assets/img/pag2/pag2_moca.svg" alt="">
+        <img src="assets/img/pag4_moca.svg" alt="">
       </section>
         <section id="lateral">
             <div class="logo_flower">
@@ -32,41 +32,25 @@
             </div>
             
             <div class="Texto_logo">
-                <h1>SEJA BEM VINDO!</h1>
-                <p>se conectar com a natureza nunca esteve tão perto, faça seu login e se conecte</p>
+                <h1>Criar uma nova senha</h1>
+                <p>Agora já estamos mais perto do que nunca, seu e-mail foi confirmado com sucesso. Agora basta você escolher uma senha forte igual uma raiz de arvore, forte e segura :)</p>
             </div>
 
             <form>
-                <div class="mb-3">
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail">
-                </div>
+
                 <div class="mb-3">
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
                 </div>
-                <div class="mb-3 form-check">
-                    <label class="form-check-label" for="exampleCheck1">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  Lembrar de mim</label>
-                  <a href="esqueceu_senha.html">Esqueci a senha</a>
+                <div class="mb-3">
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirmar senha">
                 </div>
+
                 <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary"><a href="suecesso.html">LOGIN</a></button>
+                    <button type="button" class="btn btn-primary"><a href="suecesso.html">Criar nova senha</a></button>
                 </div>
+
               </form>
 
-              <div class="ou">
-                <span>
-                  ou
-                </span>
-              </div>
-
-              <div class="accont">
-                <img src="assets/img/pag2/pag2_login_1.svg" alt="">
-                <img src="assets/img/pag2/pag2_login_2.svg" alt="">
-            </div>
-
-            <div class="criar_conta">
-                <p>Ainda não possui uma conta? <a href="criar_conta.html">Criar conta</a></p>
             </div>
         </section>
     </main>
