--- a/suecesso.html
+++ b/suecesso.html
@@ -13,7 +13,7 @@
     <!--link de icones -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <!--link de icones -->
-    <link rel="stylesheet" href="assets/css/style_login_2.css">
+    <link rel="stylesheet" href="assets/css/style_sucesso.css">
     <link rel="stylesheet" href="assets/css/btn_a.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
     <main>
       <section id="backgro"><span></span></section>
       <section id="moca">
-        <img src="assets/img/pag2/pag2_moca.svg" alt="">
+        <img src="assets/img/pag5_moca.svg" alt="">
       </section>
         <section id="lateral">
             <div class="logo_flower">
@@ -32,41 +32,16 @@
             </div>
             
             <div class="Texto_logo">
-                <h1>SEJA BEM VINDO!</h1>
-                <p>se conectar com a natureza nunca esteve tão perto, faça seu login e se conecte</p>
+                <h1>SUCESSO</h1>
+                <p>Parabens agora você ja pode acessar sua conta :)</p>
             </div>
 
             <form>
-                <div class="mb-3">
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail">
-                </div>
-                <div class="mb-3">
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
-                </div>
-                <div class="mb-3 form-check">
-                    <label class="form-check-label" for="exampleCheck1">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  Lembrar de mim</label>
-                  <a href="esqueceu_senha.html">Esqueci a senha</a>
-                </div>
                 <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary"><a href="suecesso.html">LOGIN</a></button>
+                    <button type="button" class="btn btn-primary"><a href="login_2.html">LOGAR</a></button>
                 </div>
               </form>
 
-              <div class="ou">
-                <span>
-                  ou
-                </span>
-              </div>
-
-              <div class="accont">
-                <img src="assets/img/pag2/pag2_login_1.svg" alt="">
-                <img src="assets/img/pag2/pag2_login_2.svg" alt="">
-            </div>
-
-            <div class="criar_conta">
-                <p>Ainda não possui uma conta? <a href="criar_conta.html">Criar conta</a></p>
             </div>
         </section>
     </main>
